Bug 426616 Acid2 chin is 1px too tall in FF3b5 r=pavlov, sr=roc, a1.9=beltzner